modified:   .gitignore 	modified:   requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,12 @@ duckdb
 leafmap 
 pandas
 mapclassify
+pandas
+plotly
+geopandas
+ipyleaflet
+maplibre
+rasterio
+rioxarray
+solara
+widgetsnbextension
